Fix bugs To Respons overflow views in sm

--- a/src/output.css
+++ b/src/output.css
@@ -669,6 +669,14 @@ section {
   gap: 0.75rem;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .text-center {
   text-align: center;
 }
@@ -799,6 +807,10 @@ h6 {
 
   .md\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .md\:overflow-visible {
+    overflow: visible;
   }
 
   .group:hover .md\:group-hover\:-translate-x-20 {
